...
      isLoading.value = false;
    }
  }

  Future<void> handleServiceHistory() async {
    if (selectedBooking.value == null) {
      CustomSnackbar.error('Error', 'No booking selected');
      return;
    }

    isLoading.value = true;
    try {
      if (serviceHistory.isEmpty) {
...
          // 'startDate': DateTime.now().toIso8601String(),
          // 'endDate': DateTime.now().toIso8601String(),
        });
        if (response.isOk) {
          Get.back();
          CustomModal.showSuccessDialog(
            title: 'Success',
            message: 'Riwayat Servis berhasil ditambahkan',
          );
        } else {
          CustomModal.showErrorDialog(
            title: 'Error',
            message: 'Gagal menambahkan riwayat servis',
          );
        }
      } else {
        // Update existing service history
        final currentHistory = serviceHistory.first;
        final status = currentHistory.status?.toLowerCase() ?? '';
...
            },
          );
          if (response.isOk) {
            Get.back();
            CustomModal.showSuccessDialog(
              title: 'Success',
              message: 'Riwayat Servis berhasil diperbarui',
            );
          } else {
            CustomModal.showErrorDialog(
              title: 'Error',
              message: 'Gagal memperbarui riwayat servis',
            );
          }
        }
      }
    } catch (e) {
      CustomModal.showErrorDialog(
...
